<?xml version="1.0"?>
<package format="2">
  <name>complete_planning_utilities</name>
  <version>0.0.0</version>
  <description>The complete_planning_utilities package</description>

  <maintainer email="stefano.angeli@ing.unpi.it">stefano</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>complete_planning_msgs</exec_depend>
  <exec_depend>complete_planning_pkg</exec_depend>
  <!-- <exec_depend>planning_pkg</exec_depend> - -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>
